[package]
name = "bevy_prefab"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"
lisense = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/lassade/bevy.git", branch = "dev" }
anyhow = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
erased-serde = "0.3.15"
thiserror = "1.0.25"
ron = "0.6.4"
rand = "0.8.3"